* [LineChart] Fixed animation of chart path on iOS Safari

--- a/packages/jezvejs/src/Components/LineChart/LineChart.scss
+++ b/packages/jezvejs/src/Components/LineChart/LineChart.scss
@@ -44,8 +44,4 @@
   .linechart__item {
     transition-property: cy;
   }
-
-  .linechart__path {
-    transition-property: d;
-  }
 }
